--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Ignore flask (virtual env)
+flask/
+
+# Ignore db and db repo
+db_repository/
+app.db
+
+# Ignore tmp files
+tmp/
+
 # Standard python exclusions
 # Byte-compiled / optimized / DLL files
 __pycache__/
